Fit indexer with new spider